# akc-bot

./: .gitignore  Cargo.toml
akc/: Cargo.toml
akc/src/: device.rs  device_type.rs  helpers.rs  lib.rs  snapshot.rs  user.rs
future-request/: Cargo.toml
future-request/src/: lib.rs
oauth2/: Cargo.toml
oauth2/src/: lib.rs
src/: log_message.rs  main.rs  middlewares.rs  sami.rs  witai.rs
src/clients/: akc.rs  future_request.rs  mod.rs  oauth2.rs  witai.rs
src/clients/akc/: device.rs  device_type.rs  error.rs  helpers.rs  mod.rs  snapshot.rs  token.rs  user.rs
src/clients/hipchat/: configuration.rs  installation.rs  message.rs  mod.rs  notification.rs
src/handlers/: about.rs  akc.rs  hipchat.rs  mod.rs  test.rs
src/handlers/hipchat/: descriptor.rs  installation_callback.rs  mod.rs  notification.rs
src/handlers/lib/: mod.rs  my_error.rs
src/sami/: akc_request.rs  input.rs  mod.rs  output.rs  process.rs
