[package]
name = "akc"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]

[dependencies]
urlencoded = "0.5.0"
serde = "1.0.2"
serde_derive = "1.0.2"
serde_json = "1.0.1"
hyper = "0.10.9"
hyper-native-tls = "0.2.2"
futures = "0.1"
futures-cpupool = "0.1.5"
time = "0.1.37"
url = "1.4.0"

oauth2 = { path = "../oauth2" }
future-request = { path = "../future-request" }
