[package]
name = "future-request"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]

[dependencies]
serde = "1.0.2"
serde_derive = "1.0.2"
serde_json = "1.0.1"
hyper = "0.10.9"
hyper-native-tls = "0.2.2"
futures = "0.1"
futures-cpupool = "0.1.5"
log = "0.3.7"
lazy_static = "0.2.8"
